objects/Insights__c/Insights__c.object-meta.xml
<CustomObject>
    <label>Insights</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>