objects/Insights__c/fields/Campaign2__c.field-meta.xml
<CustomField>
    <fullName>Campaign2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>