objects/Insights__c/fields/Completed_and_Sync__c.field-meta.xml
<CustomField>
    <fullName>Completed_and_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed and Sync</label>
    <type>Checkbox</type>
</CustomField>