objects/Insights__c/fields/Conversation_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Metadata__c</fullName>
    <label>Conversation Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>