objects/Insights__c/fields/Opened_At__c.field-meta.xml
<CustomField>
    <fullName>Opened_At__c</fullName>
    <label>Opened At</label>
    <type>DateTime</type>
</CustomField>