objects/Insights__c/fields/Sent_Status__c.field-meta.xml
<CustomField>
    <fullName>Sent_Status__c</fullName>
    <label>Sent Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>