objects/Insights__c/fields/TouchPoint_Name__c.field-meta.xml
<CustomField>
    <fullName>TouchPoint_Name__c</fullName>
    <label>TouchPoint Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>